# application-services

./: .taskcluster.yml  .travis.yml  Cargo.toml  build.gradle
automation/taskcluster/: decision_task_pull_request.py
components/support/ffi/src/: handle_map.rs  lib.rs
libs/: build-all.sh  build-openssl-desktop.sh  build-sqlcipher-desktop.sh  cross-compile-macos-on-linux-desktop-libs.sh
logins-sql/: Cargo.toml
logins-sql/src/: db.rs  engine.rs
places/: Cargo.toml
places/src/db/: db.rs
sync-test/: Cargo.toml
sync-test/src/: main.rs  support.rs
