[package]
name = "sync-test"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[dependencies]
logins-sql = { path = "../logins-sql" }
sync15-adapter = { path = "../sync15-adapter" }
fxa-client = { path = "../fxa-client" }
url = "1.7.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
env_logger = "0.5.13"
log = "0.4.5"
failure = "0.1.2"
rand = "0.5.5"
lazy_static = "1.1.0"
